# wirecontrol

./: README.md  blueprint-compiler-0.16.nix  com.github.kotontrion.wirecontrol.json  flake.nix  meson.build  skip-docs.patch
data/: com.github.kotontrion.wirecontrol.desktop.in  com.github.kotontrion.wirecontrol.gschema.xml  com.github.kotontrion.wirecontrol.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  de.po  meson.build  wirecontrol.pot
src/: application.vala  device.blp  device.vala  endpoint.blp  endpoint.vala  main.vala  meson.build  stream.blp  stream.vala  volume_scale.blp  volume_scale.vala  window.blp  window.vala  wirecontrol.gresource.xml
